--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "next-shadcn-template",
-	"description": "Template repository with TNT stack + a basic shadcn-ui config",
+	"name": "glpecile.xyz",
+	"description": "personal site",
 	"author": "Gian Luca Pecile",
-	"repository": "https://github.com/glpecile/next-14-shadcn-template",
-	"version": "0.4.0",
+	"repository": "https://glpecile.xyz",
+	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbo",
@@ -41,6 +41,5 @@
 		"postcss": "^8.5.1",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.7.2"
-	},
-	"packageManager": "pnpm@8.15.6"
+	}
 }
