--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
 		"@biomejs/biome": "1.9.4",
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
+		"@tailwindcss/postcss": "^4.1.10",
 		"@types/node": "^22.15.31",
 		"@types/react": "^19.0.7",
 		"@types/react-dom": "^19.0.2",
-		"autoprefixer": "^10.4.21",
 		"eslint": "^9.29.0",
 		"eslint-config-next": "15.3.3",
 		"eslint-plugin-tailwindcss": "^3.18.0",
 		"husky": "^9.1.7",
 		"postcss": "^8.5.5",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.10",
 		"typescript": "^5.8.3"
 	}
 }
