--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,7 @@
 	"extends": [
 		"eslint:recommended",
 		"plugin:react/recommended",
-		"next/core-web-vitals",
-		"plugin:tailwindcss/recommended"
+		"next/core-web-vitals"
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
@@ -19,24 +18,18 @@
 		"ecmaVersion": 11,
 		"sourceType": "module"
 	},
-	"plugins": ["tailwindcss", "react", "react-hooks"],
+	"plugins": ["react", "react-hooks"],
 	"rules": {
 		"no-mixed-spaces-and-tabs": "off",
 		"react-hooks/rules-of-hooks": "error",
 		"react-hooks/exhaustive-deps": "warn",
 		"react/prop-types": "off",
 		"semi": ["error", "always"],
-		"react/react-in-jsx-scope": "off",
-		"tailwindcss/classnames-order": "off",
-		"tailwindcss/no-custom-classname": "warn",
-		"tailwindcss/no-contradicting-classname": "error"
+		"react/react-in-jsx-scope": "off"
 	},
 	"settings": {
 		"react": {
 			"version": "detect"
-		},
-		"tailwindcss": {
-			"callees": ["cn"]
 		}
 	}
 }
